@@ -17,6 +17,7 @@
 	<properties>
 		<java.version>13</java.version>
 		<maven-compiler-pluging.version>3.8.1</maven-compiler-pluging.version>
+		<maven-compiler-plugin.configuration.source>13</maven-compiler-plugin.configuration.source>
 	</properties>
 
 	<dependencies>
@@ -89,46 +90,37 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+			        <argLine>--enable-preview</argLine>
+			    </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 			  	<artifactId>maven-compiler-plugin</artifactId>
 			  	<version>${maven-compiler-pluging.version}</version>
 			  	<configuration>
-			  		<useIncrementalCompilation>false</useIncrementalCompilation>		  		
-					<source>13</source>
-					<target>13</target>
-			  		<showWarnings>true</showWarnings>
-                    <showDeprecation>true</showDeprecation>
+					<source>${maven-compiler-plugin.configuration.source}</source>
+					<target>${maven-compiler-plugin.configuration.source}</target>
                     <compilerArgs>
-					    <arg>-Xpkginfo:always</arg>
-					</compilerArgs>
+			            --enable-preview
+			        </compilerArgs>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.ow2.asm</groupId>
-                        <artifactId>asm</artifactId>
-                        <version>7.2</version> 
-                    </dependency>
-                </dependencies>
-			</plugin>
-			<plugin>
-			    <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven-resources-plugin</artifactId>
-			    <version>3.1.0</version>
-			    <configuration>
-			        <overwrite>false</overwrite>
-			    </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 			  	<artifactId>maven-surefire-plugin</artifactId>
 			  	<version>2.22.2</version>
+			  	<configuration>
+			        <argLine>--enable-preview</argLine>
+			    </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-			  	<artifactId>maven-failsafe-plugin</artifactId>
-			  	<version>2.22.2</version>
+			    <artifactId>maven-failsafe-plugin</artifactId>
+			    <version>2.22.2</version>
+			    <configuration>
+			        <argLine>--enable-preview</argLine>
+			    </configuration>
 			</plugin>
 			<plugin>
 		        <!-- Build an executable JAR -->
@@ -136,6 +128,7 @@
 		        <artifactId>maven-jar-plugin</artifactId>
 		        <version>3.1.2</version>
 		        <configuration>
+		        	<argLine>--enable-preview</argLine>
 		        	<archive>
 		            	<manifest>
 		              		<addClasspath>true</addClasspath>
